--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -299,10 +299,10 @@ header li:hover {
 
 a.buttons {
 	-webkit-font-smoothing: antialiased;
-	background: red;
+	background: url(../images/arrow-down.png) no-repeat;
 	font-weight: normal;
 	text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 0;
-	padding: 2px 2px 2px 2px;
+	padding: 2px 2px 2px 22px;
 	height: 30px;
 }
 
